# ganeti-instance-opensuse

./: .gitignore  Makefile.am  NEWS  README  README.SuSE  common.sh.in  configure.ac  create  defaults  export  import  opensuse.sh  rename
init.d/: ganeti  ganeti-hostname
